--- a/styles/partials/base/_var.scss
+++ b/styles/partials/base/_var.scss
@@ -82,8 +82,3 @@ $bp-xxl: 1440px;
     box-shadow: -30px 30px $accent;
   }
 }
-
-%bgDetails {
-  background-repeat: no-repeat;
-  background-size: cover;
-}
